--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "exports": {
-    "./*": "./src/*.ts"
+    "./config": "./src/config.ts",
+    "./type" : "./src/type.ts"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+   "type": "module",
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3"
